
- The buffer API has been rewritten and the Redis buffer has had its performance greatly improved.
- The UDP server has been removed. Threaded/async models are the preferred replacement.
- The ``is_rate_limited`` plugin hook has been removed in favor of singular quota managers.
- The trends feature has been removed until it can be reimplemented in a more scalable way.

Version 6.4.0
-------------

Some major backend changes are introduced in Sentry 6.4.0.

django.contrib.auth
===================

The builtin Django authentication module is no more. The Group and Permission models are no
longer used, and the User model has been replaced with sentry.User.

Search
======

Search has been abstracted from the simple search manager, and now lives within
``sentry.search``. Currently only the Django backend is supported, but some sample
code for Solr Cloud integration is also available.

Event Storage
=============

A new application called ``nodestore`` now manages the event blob data. By default it
uses a Django-based backend (storing each node as a row in a table), however a Riak
backend is included and fully supported.

Additional Changes
==================

- Some initial support for time zones (user setting).
- You can now choose which tag annotations are applied to the event stream via Project Settings -> Tags.
- A new subsystem for handling email is available in ``sentry.utils.email``.
- You can now receive email notifications for notes.
- Charts now show tooltips describing the datapoint.
- JavaScript sourcemaps now support embedded sources.
- Stream annotations can now be customized to show any tags (not just number of users).
- Stacktrace frames now get truncated down to a maximum length of 50.

Protocol Version 5
==================

- sentry_version should be sent as '5'.
- The stacktrace interface now accepts a 'frames_omitted' tuple.

Version 6.3.0
-------------

- Most of the db utilities were refactored into ``sentry.db``.