@@ -8,6 +8,7 @@ Backwards Incompatible Changes
 - The UDP server has been removed. Threaded/async models are the preferred replacement.
 - The ``is_rate_limited`` plugin hook has been removed in favor of singular quota managers.
 - The trends feature has been removed until it can be reimplemented in a more scalable way.
+- Filters have been removed. Integrations should use the tagging infrastructure instead.
 
 Version 6.4.0
 -------------
